--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,8 +81,7 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  height: 100vh;
 }
 
 body {
@@ -103,5 +102,17 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+.main-container {
+  height: 100%;
+  max-height: calc(100% - 90px);
+  margin: 0px 1em;
+}
+
+@media only screen and (max-width: 1080px) {
+  .main-container {
+    height: unset;
   }
 }
